optimize admin panel